Minor corrections, thanks to the FindBugs tool !
git-svn-id: https://jupload.svn.sourceforge.net/svnroot/jupload/trunk/jupload2@816 35eed6a1-492f-0410-aaa5-912e50059252